--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 :root {
-    font-size: calc(10px + .5vw);
+    font-size: 10px;
     font-family: Inter, sans-serif;
     /* colors*/
     --primary-dark: #043873;
@@ -9,7 +9,11 @@
     --decoration-color-dark: #A7CEFC;
     --decoration-color-light: #FFE492;
     /* sizes */
-    --padding: 2rem
+    --padding: 1.6rem;
+    --mobile-size: 32rem;
+
+    /* animation */
+    --transition: all 0.5s ease-out allow-discrete;
 }
 
 * {
@@ -19,10 +23,54 @@
 }
 
 body{
-    background: var(--primary-dark);
+    
 }
-img{
-    width: 20rem;
-    height: 5rem;
-    background: red;
+
+header{
+    width: 100%;
+    padding: var(--padding);
+    background: var(--primary-dark);
+    display: flex;
+    flex-direction: row;
+    align-items: stretch;
+    justify-content: space-between;
+
+    img{
+        width: 13rem;
+        height: auto;
+    }
+
+    ul{
+        display: none;
+        visibility: hidden;
+    }
+    nav{
+        display: none;
+        visibility: hidden;
+    }
+}
+
+.burger{
+    width: 4.2rem;
+    border: none;
+    background: inherit;
+    position: relative;
+    div{
+        width: 100%;
+        height: .2rem;
+        background: var(--primary-light);
+        position: absolute;
+        left: 0;
+    }
+    div:first-child{
+        top: 0;
+    }
+    div:nth-child(2){
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%)
+    }
+    div:last-child{
+        bottom: 0;
+    }
 }
