--- a/style.css
+++ b/style.css
@@ -84,24 +84,6 @@ header {
         bottom: 0;
     }
 
-    /* &:focus {
-        div:first-child {
-            transform: rotate(45deg) translate(5px, 10px);
-            left: 10px;
-        }
-
-        div:nth-child(2) {
-            display: none;
-            visibility: hidden;
-        }
-
-        div:last-child {
-        transform: rotate(-45deg) translate(5px, -10px);
-        left: 10px;
-        }
-
-    } */
-
     &:hover {
         div:first-child {
             transform: rotate(45deg)translate(0, -5px);
@@ -157,3 +139,54 @@ header {
 
     }
 }
+
+main{
+    width: 100%;
+    color: var(--text-color-lihgt);
+    button{
+        border: none;
+        outline: none;
+        padding: 20px 40px;
+        border-radius: 8px;
+        background: var(--primary-light);
+        color: inherit
+    }
+    /* bg mast done */
+}
+.banner{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background: var(--primary-dark);
+    padding: 1.6rem;
+    background-image: url('assets/bg.svg');
+    background-repeat: no-repeat;
+    /* background-position: center; */
+    object-fit: cover;
+    object-position: center;
+
+    h1{
+        margin-top: 60px;
+        margin-bottom: 34px;
+        font-size: 40px;
+        text-align: center;
+    }
+    p{
+        margin-bottom: 60px;
+        font-size: 20px;
+        text-align: center;
+    }
+    button{
+        margin-bottom: 60px;
+    }
+    figure{
+        margin-bottom: 80px;
+        width: 100%;
+        min-height: 200px;
+        background: var(--decoration-color-dark);
+        opacity: 0.7;
+    }
+}
+
