--- a/style.css
+++ b/style.css
@@ -10,7 +10,9 @@
     --decoration-color-light: #FFE492;
     /* sizes */
     --padding: 1.6rem;
-    --mobile-size: 32rem;
+    /* --mobile-point: 32rem;
+    --tablet-point: 115,2rem;
+    --desctop-point: 192rem; */
 
     /* animation */
     --transition: all 0.5s ease-out allow-discrete;
@@ -22,7 +24,9 @@
     box-sizing: border-box;
 }
 
-body {}
+body {
+    background: #fff;
+}
 
 header {
     width: 100%;
@@ -63,7 +67,7 @@ header {
     div {
         width: 4rem;
         height: .2rem;
-        background: var(--decoration-color-light);
+        background: var(--text-color-lihgt);
         position: absolute;
         left: 0;
         transform: rotate(0);
@@ -140,10 +144,11 @@ header {
     }
 }
 
-main{
+main {
     width: 100%;
     color: var(--text-color-lihgt);
-    button{
+
+    button {
         border: none;
         outline: none;
         padding: 20px 40px;
@@ -151,42 +156,223 @@ main{
         background: var(--primary-light);
         color: inherit
     }
-    /* bg mast done */
 }
-.banner{
+
+.banner,
+.project,
+.work,
+.extension {
     width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background: var(--primary-dark);
     padding: 1.6rem;
-    background-image: url('assets/bg.svg');
-    background-repeat: no-repeat;
-    /* background-position: center; */
-    object-fit: cover;
-    object-position: center;
 
-    h1{
+    article {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+}
+
+.banner {
+    background: var(--primary-dark) url('assets/bg.svg') no-repeat;
+    color: var(--text-color-lihgt);
+
+    h1 {
+        color: inherit;
         margin-top: 60px;
         margin-bottom: 34px;
         font-size: 40px;
         text-align: center;
     }
-    p{
+
+    p {
         margin-bottom: 60px;
         font-size: 20px;
         text-align: center;
     }
-    button{
+
+    button {
         margin-bottom: 60px;
     }
-    figure{
+
+    figure {
+        padding: 1.6rem;
         margin-bottom: 80px;
         width: 100%;
-        min-height: 200px;
-        background: var(--decoration-color-dark);
-        opacity: 0.7;
+        height: auto;
+        min-height: 100px;
+        overflow: hidden;
+        filter: hue-rotate(90deg) drop-shadow(0px 16px 20px var(--decoration-color-dark));
+        ;
+
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: fill;
+            object-position: center;
+        }
     }
 }
 
+.project {
+    color: var(--text-color-dark);
+
+    h2 {
+        color: inherit;
+        margin-top: 60px;
+        margin-bottom: 34px;
+        font-size: 40px;
+        text-align: center;
+    }
+
+    p {
+        margin-bottom: 60px;
+        font-size: 20px;
+        text-align: center;
+    }
+
+    button {
+        margin-bottom: 60px;
+    }
+
+    figure {
+        padding: 1.6rem;
+        margin-bottom: 80px;
+        width: 100%;
+        height: auto;
+        min-height: 100px;
+        overflow: hidden;
+        filter: hue-rotate(90deg) drop-shadow(0px 16px 20px var(--decoration-color-dark));
+        ;
+
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: fill;
+            object-position: center;
+        }
+    }
+}
+
+.work {
+    color: var(--text-color-dark);
+
+    h2 {
+        margin-top: 60px;
+        margin-bottom: 34px;
+        font-size: 40px;
+        text-align: center;
+    }
+
+    p {
+        margin-bottom: 60px;
+        font-size: 20px;
+        text-align: center;
+    }
+
+    button {
+        margin-bottom: 60px;
+    }
+
+    figure {
+        padding: 1.6rem;
+        margin-bottom: 80px;
+        width: 100%;
+        height: auto;
+        min-height: 100px;
+        overflow: hidden;
+        filter: hue-rotate(90deg) drop-shadow(0px 16px 20px var(--decoration-color-dark));
+        ;
+
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: fill;
+            object-position: center;
+        }
+    }
+}
+
+.extension {
+    background: var(--primary-dark);
+    color: var(--text-color-lihgt);
+
+    h2 {
+        color: inherit;
+        margin-top: 60px;
+        margin-bottom: 34px;
+        font-size: 40px;
+        text-align: center;
+    }
+
+    p {
+        margin-bottom: 60px;
+        font-size: 20px;
+        text-align: center;
+    }
+
+    button {
+        margin-bottom: 60px;
+    }
+
+    figure {
+        padding: 1.6rem;
+        margin-bottom: 80px;
+        width: 100%;
+        height: auto;
+        min-height: 100px;
+        overflow: hidden;
+        filter: hue-rotate(90deg) drop-shadow(0px 16px 20px var(--decoration-color-dark));
+        ;
+
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: fill;
+            object-position: center;
+        }
+    }
+}
+
+@media (min-width: 115.2rem) {
+    .burger {
+        display: none;
+    }
+
+    header {
+        ul {display: block; visibility: visible;}
+
+        nav {display: block; visibility: visible;}
+    }
+
+    .banner,
+    .project,
+    .work,
+    .extension {
+        article{
+            h1,h2{
+                font-size: 7rem;
+            }
+            p{
+                font-size: 3.5rem;
+            }
+            button{
+                font-size: 3.5rem;
+            }
+        }
+    }
+
+    .banner,
+    .work {
+        flex-direction: row;
+    }
+
+    .project,
+    .extension {
+        flex-direction: row-reverse;
+    }
+}
