--- a/style.css
+++ b/style.css
@@ -171,7 +171,7 @@ main {
     gap: 10px;
     padding: 1.6rem;
 
-    article {
+    article{
         height: inherit;
         display: flex;
         flex-direction: column;
@@ -337,6 +337,114 @@ main {
             height: 100%;
             object-fit: fill;
             object-position: center;
+        }
+    }
+}
+.sponsors{
+    color: var(--text-color-dark);
+
+    h2 {
+        margin-top: 60px;
+        margin-bottom: 34px;
+        font-size: 40px;
+        text-align: center;
+    }
+    ul{
+        list-style: none;
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-around;
+        align-items: center;
+        gap: 10px;
+        padding: 1.6rem;
+        margin-bottom: 80px;
+    }
+    img{
+        width: 100%;
+        height: auto;
+        object-fit: cover;
+        object-position: center;
+    }
+    a{
+        img{
+            transform: scale(1.1);
+            transition: var(--transition);
+        }
+    }
+    a:hover{
+        img{
+            transform: scale(1.2);
+            transition: var(--transition);
+        }
+    }
+}
+footer{
+    background: var(--primary-dark);
+    padding: 1.6rem;
+    display: flex;
+    flex-direction: row;
+    align-items: start;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    gap: 1rem;
+    color: var(--text-color-lihgt);
+    font-size: 2rem;
+    figure{
+        /* flex: 2; */
+        max-width: 20rem;
+        img{
+            width:100%;
+ 
+            height: auto;
+            object-fit: cover;
+            object-position: center;
+        }
+        figcaption{
+            color: inherit;
+            text-align: center;
+            font-size: inherit;
+        }
+    }
+    ul{
+        /* flex: 1; */
+        list-style: none;
+        a{
+            color: inherit;
+            text-decoration: none;
+            font-size: 1.6rem;
+            white-space: no-wrap;
+            user-select: none;
+        }
+    }
+    article{
+        /* flex: 2; */
+        max-width: 20rem;
+        font-size: 1.6rem;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: flex-end;
+    }
+    h3{
+        margin-bottom: 1rem;
+    }
+    button{
+        margin-top: 20px;
+    }
+}
+
+@media (width < 980px){
+    footer{
+        figure{
+            width: 100%;
+        }
+        ul{
+            flex :1,
+        }
+        article{
+            width :100%;
         }
     }
 }
